fixed widget alignment, Jira#CXDEVII-1336

--- a/components/_button.scss
+++ b/components/_button.scss
@@ -1,4 +1,4 @@
-button, div.button > a, .button {
+button, .button {
   display: inline-block;
   cursor: pointer; 
   height: auto;
