--- a/widgets/_lhfs.scss
+++ b/widgets/_lhfs.scss
@@ -357,9 +357,10 @@ li.right {
 ul.horizontal {
   display: table;
   &.row-fluid {
-    height: 50px;
+    //height: 50px;
   }
   margin: 0;
+  margin-bottom: 20px;
   @media screen and(max-width: $rc-s-max-width) {
     margin-bottom: 30px;
   }
